--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="conteneur-fluid">
     <div class="row">
         <div class="col">
-            <h2>Content</h2>
+            <h2>Home</h2>
         </div>
     </div>
     <div class="row">
