formulaire et card

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
-            <img src="Abstract-colorful-shapes-on-transparent-background-PNG.png" alt="">
+        <div class="col-12 col-md-4">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
         </div>
         <div class="col">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam ipsa inventore nisi eos nobis debitis laboriosam voluptatibus nesciunt quos sequi natus sint, provident repudiandae ducimus et excepturi totam adipisci voluptatem cupiditate ullam voluptatum molestias esse aperiam? Porro eos cumque necessitatibus tenetur expedita numquam sapiente, est rem ut odio explicabo molestias, saepe, magni laudantium hic asperiores tempore provident cum. Aliquam eveniet distinctio unde facilis repellendus incidunt totam ex! Quo esse pariatur, laborum odio, dolorum labore delectus sunt quae reiciendis, earum similique. Et, nulla ad. Odio rerum eaque in voluptatem beatae numquam. Suscipit, quos quod totam, est maxime nihil perspiciatis sunt placeat omnis et aperiam praesentium enim cupiditate recusandae quam at nobis, quae provident ipsam! Explicabo, eveniet labore! Ducimus aliquid nisi quod quasi illo accusantium! Doloribus, aliquam.</p>
