--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,42 @@
-<p>portfolio works!</p>
+<section class="conteneur-fluid">
+    <div class="row">
+        <div class="col">
+            <h2>Porfolio</h2>
+        </div>
+    </div>
+<div class="row">
+    <div class="col-12 col-md-4">
+        <div class="card">
+            <img src="https://cdn.pixabay.com/photo/2013/04/04/12/34/mountains-100367_1280.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    </div>
+
+
+    <div class="col-12 col-md-4">
+        <div class="card">
+            <img src="https://cdn.pixabay.com/photo/2022/03/30/19/19/mountain-7101737_1280.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+    </div>
+
+
+    <div class="col-12 col-md-4">
+        <div class="card">
+            <img src="https://cdn.pixabay.com/photo/2013/07/18/20/26/sea-164989_1280.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            </div>
+    </div>
+</div>
